src/plugins/chart_expressions/expression_xy/public/components/tooltip/tooltip.scss
.detailedTooltip {
  @include euiToolTipStyle('s');
  pointer-events: none;
  max-width: $euiSizeXL * 10;
  overflow: hidden;
  padding: $euiSizeS;

  table {
    td,
    th {
      text-align: left;
      padding: $euiSizeXS;
      overflow-wrap: break-word;
      word-wrap: break-word;
    }
  }
}

.detailedTooltip__header {
  > :last-child {
    margin-bottom: $euiSizeS;
  }
}

.detailedTooltip__labelContainer,
.detailedTooltip__valueContainer {
  overflow-wrap: break-word;
  word-wrap: break-word;
}

.detailedTooltip__label {
  font-weight: $euiFontWeightMedium;
  color: shade($euiColorGhost, 20%);
}

.detailedTooltip__header--partial {
  font-weight: $euiFontWeightRegular;
  min-width: $euiSize * 12;
}

